--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,9 +3,9 @@ services:
   github-runner:
     image: myoung34/github-runner:latest
     environment:
-      - REPO_URL=https://github.com/your-username/your-repo
+      - REPO_URL=https://github.com/kuperiu/embed
       - RUNNER_NAME=mac-docker-runner
-      - RUNNER_TOKEN=your_registration_token
+      - ACCESS_TOKEN=$GITHUB_RUNNER_TOKEN
       - RUNNER_WORKDIR=/tmp/github-runner
       - LABELS=mac,docker
     volumes:
