--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -32,7 +32,9 @@ jobs:
       # 📦 Uses release-please to open a PR that updates CHANGELOG.md based on semantic commits
       - uses: googleapis/release-please-action@v4
         with:
-          release-type: simple # No versioning/tags, just changelog updates
+          release-type: node
+          target-branch: development
+           # No versioning/tags, just changelog updates
         #   skip-github-release: true # Don't create GitHub Releases
         #   target-branch: dev
         #   skip-github-pull-request: true
