--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -33,7 +33,7 @@ jobs:
       - uses: googleapis/release-please-action@v4
         with:
           target-branch: ${{ github.ref_name }}
-          release-type: node
+          release-type: simple
            # No versioning/tags, just changelog updates
         #   skip-github-release: true # Don't create GitHub Releases
         #   target-branch: dev
