--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -13,12 +13,7 @@ name: "Changelog + PR Validation"
 
 on:
   push:
-    branches:
-      - development
-      - sandbox
-      - production
-  pull_request:
-    types: [opened, edited, reopened]
+
 
 jobs:
   release-please:
@@ -32,8 +27,8 @@ jobs:
       # 📦 Uses release-please to open a PR that updates CHANGELOG.md based on semantic commits
       - uses: googleapis/release-please-action@v4
         with:
-          release-type: node
-          target-branch: development
+          target-branch: ${{ github.event.pull_request.base.ref }}
+          release-type: simple
            # No versioning/tags, just changelog updates
         #   skip-github-release: true # Don't create GitHub Releases
         #   target-branch: dev
