--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -18,7 +18,6 @@ on:
       - sandbox
       - production
   pull_request:
-    types: [opened, edited, reopened]
 
 jobs:
   release-please:
@@ -33,6 +32,7 @@ jobs:
       - uses: googleapis/release-please-action@v4
         with:
           release-type: simple # No versioning/tags, just changelog updates
+          target-branch: ${{ github.event.pull_request.base.ref }}
         #   skip-github-release: true # Don't create GitHub Releases
         #   target-branch: dev
         #   skip-github-pull-request: true
