--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -35,6 +35,6 @@ jobs:
         with:
           target-branch: ${{ github.event.pull_request.base.ref }}
           release-type: simple
-        #   skip-github-release: true # Don't create GitHub Releases
+          skip-github-release: true # Don't create GitHub Releases
         #   target-branch: dev
         #   skip-github-pull-request: true
